# Dolos

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_proxy.rs  main.rs  state.rs  sys_tray.rs  tcp_proxy.rs  utils.rs
ui/: index.html
ui/assets/: styles.css
