[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["leastrio"]
license = ""
repository = "https://github.com/Leastrio/dolos"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
tokio = { version = "1.34.0", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
native-tls = "0.2"
tokio-native-tls = "0.3.1"
jsonwebtoken = "9.1.0"
quick-xml = { version = "0.31.0", features = ["async-tokio"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
