[package]
name = "dolos"
version = "0.1.0"
description = "Dolos Desktop Application"
default-run = "dolos"
license = "GPLv3"
repository = "https://github.com/Leastrio/Dolos"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "updater", "system-tray"] }
tokio = { version = "1.34.0", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
native-tls = "0.2"
tokio-native-tls = "0.3.1"
jsonwebtoken = "9.1.0"
quick-xml = { version = "0.31.0", features = ["async-tokio"] }
sysinfo = "0.29.11"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
